--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
 <body>
   <div id="app"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin.min.js?r=182"></script>
 </body>
 
 </html>
